--- a/index.html
+++ b/index.html
@@ -52,6 +52,14 @@
       </div>
     </nav>
     <!-- End Nav-bar -->
+   <!-- Ex 3) Add a Jumbotron section with the name and the claim of the tour operator agency-->
+   <div class="jumbotron">
+    <h1 class="display-4">Travel & Tour</h1>
+    
+    <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
+  </div>
+
+
     <!-- Bootstrap js links -->
     <script
       src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
