--- a/index.html
+++ b/index.html
@@ -12,6 +12,11 @@
       integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l"
       crossorigin="anonymous"
     />
+    <!-- Bootstrap Icons -->
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css"
+    />
   </head>
   <body>
     <!-- Nav bar starts -->
@@ -52,13 +57,92 @@
       </div>
     </nav>
     <!-- End Nav-bar -->
-   <!-- Ex 3) Add a Jumbotron section with the name and the claim of the tour operator agency-->
-   <div class="jumbotron">
-    <h1 class="display-4">Travel & Tour</h1>
-    
-    <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
-  </div>
+    <!-- Ex 3) Add a Jumbotron section with the name and the claim of the tour operator agency-->
+    <div class="jumbotron">
+      <h1 class="display-4">Travel & Tour</h1>
 
+      <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
+    </div>
+    <!-- end question three -->
+    <!-- Q4 Deal of the Week -->
+    <div class="container">
+      <h3>Deal of the Week</h3>
+      <p>
+        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Pariatur
+        laudantium perferendis culpa voluptatem? Esse magni soluta, amet sint ut
+        ipsum quo iure veritatis consequatur eligendi modi eos quia totam nobis?
+      </p>
+      <div class="row pt-5">
+        <div class="col-12 col-sm-6 col-md-3">
+          <div class="card">
+            <img src="./destination1.jpeg" class="card-img-top" alt="..." />
+            <div class="card-body">
+              <h5 class="card-title">Maldives</h5>
+              <p class="card-text">
+                Some quick example text to build on the card title and make up
+                the bulk of the card's content.
+              </p>
+              <a href="#" class="btn btn-primary">Book today</a>
+              <p class="info d-inline-block">
+                <i class="bi bi-currency-dollar"></i>500
+              </p>
+            </div>
+          </div>
+        </div>
+        <!-- one -->
+        <div class="col-12 col-sm-6 col-md-3">
+          <div class="card">
+            <img src="./destination1.jpeg" class="card-img-top" alt="..." />
+            <div class="card-body">
+              <h5 class="card-title">Indonasia</h5>
+              <p class="card-text">
+                Some quick example text to build on the card title and make up
+                the bulk of the card's content.
+              </p>
+              <a href="#" class="btn btn-primary">Book today</a>
+              <p class="info d-inline-block">
+                <i class="bi bi-currency-dollar"></i>500
+              </p>
+            </div>
+          </div>
+        </div>
+        <!-- two -->
+        <div class="col-12 col-sm-6 col-md-3">
+          <div class="card">
+            <img src="./destination1.jpeg" class="card-img-top" alt="..." />
+            <div class="card-body">
+              <h5 class="card-title">Sweden</h5>
+              <p class="card-text">
+                Some quick example text to build on the card title and make up
+                the bulk of the card's content.
+              </p>
+              <a href="#" class="btn btn-primary">Book today</a>
+              <p class="info d-inline-block">
+                <i class="bi bi-currency-dollar"></i>500
+              </p>
+            </div>
+          </div>
+        </div>
+        <!-- three -->
+        <div class="col-12 col-sm-6 col-md-3">
+          <div class="card">
+            <img src="./destination1.jpeg" class="card-img-top" alt="..." />
+            <div class="card-body">
+              <h5 class="card-title">Thailand</h5>
+              <p class="card-text">
+                Some quick example text to build on the card title and make up
+                the bulk of the card's content.
+              </p>
+              <a href="#" class="btn btn-primary">Book today</a>
+              <p class="info d-inline-block">
+                <i class="bi bi-currency-dollar"></i>500
+              </p>
+            </div>
+          </div>
+        </div>
+        <!-- four -->
+      </div>
+    </div>
 
     <!-- Bootstrap js links -->
     <script
