--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
           alt=""
         />
       </a>
-      <a class="navbar-brand" href="#">Travel & Tour</a>
+      <a class="navbar-brand mb-0 h1" href="#">Travel & Tour</a>
       <button
         class="navbar-toggler"
         type="button"
@@ -143,7 +143,62 @@
         <!-- four -->
       </div>
     </div>
-
+    <!-- Q5 -->
+    <div class="container mt-5">
+      <div
+        id="carouselExampleControls"
+        class="carousel slide"
+        data-ride="carousel"
+      >
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img
+              src="./summer1.webp"
+              class="d-block w-100"
+              height="100%"
+              style="object-fit: cover"
+              alt="..."
+            />
+          </div>
+          <div class="carousel-item">
+            <img
+              src="./summer2.jpeg"
+              class="d-block w-100"
+              height="100%"
+              style="object-fit: fill"
+              alt="..."
+            />
+          </div>
+          <div class="carousel-item">
+            <img
+              src="./summer3.jpeg"
+              class="d-block w-100"
+              height="100%"
+              style="object-fit: cover"
+              alt="..."
+            />
+          </div>
+        </div>
+        <a
+          class="carousel-control-prev"
+          href="#carouselExampleControls"
+          role="button"
+          data-slide="prev"
+        >
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="sr-only">Previous</span>
+        </a>
+        <a
+          class="carousel-control-next"
+          href="#carouselExampleControls"
+          role="button"
+          data-slide="next"
+        >
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="sr-only">Next</span>
+        </a>
+      </div>
+    </div>
     <!-- Bootstrap js links -->
     <script
       src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
