--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
       </div>
     </div>
     <!-- Q5 -->
-    <div class="container mt-5">
+    <div class="container-fluid px-0 mt-5">
       <div
         id="carouselExampleControls"
         class="carousel slide"
@@ -199,6 +199,90 @@
         </a>
       </div>
     </div>
+
+    <!--  -->
+    <div class="container mt-5">
+      <div class="row">
+        <div class="col-12 mb-5">
+          <h1 class="text-center shadow-lg p-3 mb-5 bg-white rounded">
+            Summer destionations 2021
+          </h1>
+        </div>
+        <div class="col-12 col-sm-6 col-md-4 mb-3">
+          <div class="card" style="width: 18rem">
+            <img src="..." class="card-img-top" alt="..." />
+            <div class="card-body">
+              <p class="card-text">
+                Some quick example text to build on the card title and make up
+                the bulk of the card's content.
+              </p>
+            </div>
+          </div>
+        </div>
+        <!--  -->
+        <div class="col-12 col-sm-6 col-md-4 mb-3">
+          <div class="card" style="width: 18rem">
+            <img src="..." class="card-img-top" alt="..." />
+            <div class="card-body">
+              <p class="card-text">
+                Some quick example text to build on the card title and make up
+                the bulk of the card's content.
+              </p>
+            </div>
+          </div>
+        </div>
+        <!--  -->
+        <div class="col-12 col-sm-6 col-md-4 mb-3">
+          <div class="card" style="width: 18rem">
+            <img src="..." class="card-img-top" alt="..." />
+            <div class="card-body">
+              <p class="card-text">
+                Some quick example text to build on the card title and make up
+                the bulk of the card's content.
+              </p>
+            </div>
+          </div>
+        </div>
+        <!--  -->
+        <div class="col-12 col-sm-6 col-md-4 mb-3">
+          <div class="card" style="width: 18rem">
+            <img src="..." class="card-img-top" alt="..." />
+            <div class="card-body">
+              <p class="card-text">
+                Some quick example text to build on the card title and make up
+                the bulk of the card's content.
+              </p>
+            </div>
+          </div>
+        </div>
+        <!--  -->
+        <div class="col-12 col-sm-6 col-md-4 mb-3">
+          <div class="card" style="width: 18rem">
+            <img src="..." class="card-img-top" alt="..." />
+            <div class="card-body">
+              <p class="card-text">
+                Some quick example text to build on the card title and make up
+                the bulk of the card's content.
+              </p>
+            </div>
+          </div>
+        </div>
+        <!--  -->
+        <div class="col-12 col-sm-6 col-md-4 mb-3">
+          <div class="card" style="width: 18rem">
+            <img src="..." class="card-img-top" alt="..." />
+            <div class="card-body">
+              <p class="card-text">
+                Some quick example text to build on the card title and make up
+                the bulk of the card's content.
+              </p>
+            </div>
+          </div>
+        </div>
+        <!--  -->
+      </div>
+    </div>
+    <!--  -->
     <!-- Bootstrap js links -->
     <script
       src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
