--- a/index.html
+++ b/index.html
@@ -199,8 +199,8 @@
         </a>
       </div>
     </div>
- 
- <!-- -->
+
+    <!-- -->
     <div class="container mt-5">
       <div class="row">
         <div class="col-12 mb-5">
@@ -208,8 +208,8 @@
             Summer destionations 2021
           </h1>
         </div>
-        <div class="col-12 col-sm-6 col-md-4 mb-3">
-          <div class="card" style="width: 18rem">
+        <div class="col-6 col-sm-6 col-md-4 col-lx-2 mb-3">
+          <div class="card">
             <img src="./summer 1.jfif" class="card-img-top" alt="..." />
             <div class="card-body">
               <p class="card-text">
@@ -220,8 +220,8 @@
           </div>
         </div>
         <!--  -->
-        <div class="col-12 col-sm-6 col-md-4 mb-3">
-          <div class="card" style="width: 18rem">
+        <div class="col-6 col-sm-6 col-md-4 col-lx-2 mb-3">
+          <div class="card">
             <img src="./summer 2.jfif" class="card-img-top" alt="..." />
             <div class="card-body">
               <p class="card-text">
@@ -232,8 +232,8 @@
           </div>
         </div>
         <!--  -->
-        <div class="col-12 col-sm-6 col-md-4 mb-3">
-          <div class="card" style="width: 18rem">
+        <div class="col-6 col-sm-6 col-md-4 col-lx-2 mb-3">
+          <div class="card">
             <img src="./sumer 3.jfif" class="card-img-top" alt="..." />
             <div class="card-body">
               <p class="card-text">
@@ -244,9 +244,13 @@
           </div>
         </div>
         <!--  -->
-        <div class="col-12 col-sm-6 col-md-4 mb-3">
-          <div class="card" style="width: 18rem">
-            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ5B9pK4xH4sCTc_RkhJjjl-ijmA9aczhsycTAD-RkWGeCkVZcI840WG7TEegwekvxOSEQ&usqp=CAU" class="card-img-top" alt="..." />
+        <div class="col-6 col-sm-6 col-md-4 col-lx-2 mb-3">
+          <div class="card">
+            <img
+              src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ5B9pK4xH4sCTc_RkhJjjl-ijmA9aczhsycTAD-RkWGeCkVZcI840WG7TEegwekvxOSEQ&usqp=CAU"
+              class="card-img-top"
+              alt="..."
+            />
             <div class="card-body">
               <p class="card-text">
                 Some quick example text to build on the card title and make up
@@ -256,9 +260,13 @@
           </div>
         </div>
         <!--  -->
-        <div class="col-12 col-sm-6 col-md-4 mb-3">
-          <div class="card" style="width: 18rem">
-            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTXJJBt9SheTieQWQx67pSk5y0CrpRwNlA_vA500E1WQdq0uyT93WA6-0eK3wItH6bwrDI&usqp=CAU" class="card-img-top" alt="..." />
+        <div class="col-6 col-sm-6 col-md-4 col-lx-2 mb-3">
+          <div class="card">
+            <img
+              src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTXJJBt9SheTieQWQx67pSk5y0CrpRwNlA_vA500E1WQdq0uyT93WA6-0eK3wItH6bwrDI&usqp=CAU"
+              class="card-img-top"
+              alt="..."
+            />
             <div class="card-body">
               <p class="card-text">
                 Some quick example text to build on the card title and make up
@@ -268,9 +276,13 @@
           </div>
         </div>
         <!--  -->
-        <div class="col-12 col-sm-6 col-md-4 mb-3">
-          <div class="card" style="width: 18rem">
-            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ5B9pK4xH4sCTc_RkhJjjl-ijmA9aczhsycTAD-RkWGeCkVZcI840WG7TEegwekvxOSEQ&usqp=CAU" class="card-img-top" alt="..." />
+        <div class="col-6 col-sm-6 col-md-4 col-lx-2 mb-3">
+          <div class="card">
+            <img
+              src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ5B9pK4xH4sCTc_RkhJjjl-ijmA9aczhsycTAD-RkWGeCkVZcI840WG7TEegwekvxOSEQ&usqp=CAU"
+              class="card-img-top"
+              alt="..."
+            />
             <div class="card-body">
               <p class="card-text">
                 Some quick example text to build on the card title and make up
