--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
       </div>
     </div>
 
-    <!-- -->
+    <!-- Q5-->
     <div class="container mt-5">
       <div class="row">
         <div class="col-12 mb-5">
@@ -295,6 +295,37 @@
       </div>
     </div>
     <!--  -->
+    <!-- Q6 -->
+    <div class="container mt-5 mb-5">
+      <div class="row">
+        <div class="col-12 col-sm-6 col-md-5">
+          <h3 class="btn text-center shadow-lg p-3 mb-5 bg-white rounded">
+            Deal of the day
+          </h3>
+        </div>
+      </div>
+      <!--  -->
+      <div class="row">
+        <div class="col-8">
+          <img
+            src="./summer 2.jfif"
+            class="img-fluid w-100"
+            height="100%"
+            style="object-fit: cover"
+            alt=""
+          />
+        </div>
+        <div class="col-4">
+          <ul class="list-group list-group-flush">
+            <li class="list-group-item">Price:</li>
+            <li class="list-group-item">Destination:</li>
+            <li class="list-group-item">Some other info</li>
+            <li class="list-group-item">Some other info</li>
+            <li class="list-group-item">Some other info</li>
+          </ul>
+        </div>
+      </div>
+    </div>
     <!-- Bootstrap js links -->
     <script
       src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
