--- a/index.html
+++ b/index.html
@@ -22,12 +22,7 @@
     <!-- Nav bar starts -->
     <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
       <a class="navbar-brand" href="#">
-        <img
-          src="https://img.freepik.com/free-vector/detailed-travel-logo_23-2148616611.jpg?size=338&ext=jpg&ga=GA1.2.1721207505.1629590400"
-          width="30"
-          height="30"
-          alt=""
-        />
+        <img src="./nav.png" width="30" height="30" alt="" />
       </a>
       <a class="navbar-brand mb-0 h1" href="#">Travel & Tour</a>
       <button
@@ -58,10 +53,11 @@
     </nav>
     <!-- End Nav-bar -->
     <!-- Ex 3) Add a Jumbotron section with the name and the claim of the tour operator agency-->
-    <div class="jumbotron">
-      <h1 class="display-4">Travel & Tour</h1>
-
-      <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
+    <div class="jumbotron shadow-lg text-center">
+      <h1 class="display-4">
+        The best of <br />
+        <span class="ml-5 pl-5">Scandinavia</span>
+      </h1>
     </div>
     <!-- end question three -->
     <!-- Q4 Deal of the Week -->
